--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,19 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+
     - name: get version
       id: version
       uses: ./
-      with: 
+      with:
         path: 'package.json'
         prop_path: 'version'
-    - run: echo ${{steps.version.outputs.prop}}        
-        
+    - run: echo ${{steps.version.outputs.prop}}
+
     - name: get nested json property
       id: get_json_property
       uses: ./
-      with: 
+      with:
         path: 'package.json'
         prop_path: 'scripts.format'
+    - run: echo ${{steps.get_json_property.outputs.prop}}
 
-    - run: echo ${{steps.get_json_property.outputs.prop}}     
+    - name: get item in array
+      id: version
+      uses: ./
+      with:
+        path: 'package.json'
+        prop_path: 'keywords[0]'
+    - run: echo ${{steps.version.outputs.prop}}
