--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "get-json-property",
+  "name": "get-json-property-by-lodash",
   "version": "0.1.0",
   "private": true,
-  "description": "Simple GitHub Action to read a specified property from a JSON file.",
+  "description": "Simple GitHub Action to read a specified property from a JSON file. With lodash.get()",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc && npm run pack",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/notiz-dev/github-action-template"
+    "url": "https://github.com/kekedaine/github-action-json-property-by-lodash"
   },
   "keywords": [
     "actions",
@@ -21,15 +21,18 @@
     "typescript",
     "GitHub"
   ],
-  "author": "notiz.dev",
+  "author": "dainv",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.0"
+    "@actions/core": "^1.6.0",
+    "@types/lodash": "^4.14.178",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
-    "@zeit/ncc": "^0.20.5",
-    "prettier": "^1.19.1",
-    "typescript": "3.8.3"
+    "@zeit/ncc": "^0.22.3",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.2",
+    "@types/lodash": "^4.14.178"
   }
 }
