--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@types/node": "^12.7.12",
     "@zeit/ncc": "^0.22.3",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.2",
-    "@types/lodash": "^4.14.178"
+    "typescript": "^4.5.2"
   }
 }
